slightly increased complexity of file

--- a/test/fixtures/files/TestDoc_UltraSimpleHTMLDocx.htm
+++ b/test/fixtures/files/TestDoc_UltraSimpleHTMLDocx.htm
@@ -5,17 +5,20 @@
 <body lang=EN-AU style='tab-interval:36.0pt'>
 <div class=WordSection1>
 <h1><span>Quote Costs</span></h1>
-<p><span><span>blah</span></span></p>
+<p><span><span>blah before</span></span></p>
 <table>
  <tr>
-  <td>cell1</td>
+  <td><p></span>cell1a</span></p></td>
+  <td><p></span>cell1b</span></p></td>
  </tr>
  <tr>
-  <td>cell2</td>
+  <td><p></span>cell2b</span></p></td>
+  <td><p></span>cell2b</span></p></td>
  </tr>
 </table>
 <p><span>blahend</span></p>
-
+<h2><span>Other Heading</span></h1>
+<p><span><span>blah in other heading</span></span></p>
 </div>
 
 </body>
